@@ -1,3 +1,4 @@
+7/17/12 add "Developer->Test game reward" menu item
 7/17/12 add graph images to game reward
 7/17/12 add point tool images to game reward
 7/16/12 configure game reward based on level
